--- a/figures/06_lulc_buffer_demo.Rmd
+++ b/figures/06_lulc_buffer_demo.Rmd
@@ -212,14 +212,27 @@ test[,3] <- factor(test[,3])
 names(test)[3] <- "value"
 test <- test %>%
   drop_na("value")
-cols <- dplyr::filter(pal_nlcd(), code %in% unique(test[,3]))
+cols     <- dplyr::filter(pal_nlcd(), code %in% unique(test[,3]))
+cols_agg <- mutate(cols, color = "#AA7028")
 
 # codes 81 = pasture; 82 = row_crop
+
+g_nlcd_agg <- ggplot() + 
+  geom_raster(data = test, aes(x = x, y = y, fill = value)) +
+  scale_fill_manual(values = cols_agg$color, labels = cols_agg$description) +
+  geom_sf(data = iws, alpha = 0) +
+  geom_sf(data = network) +
+  geom_sf(data = ll_lake) +
+  coord_sf(datum = NA) + 
+  theme_void() # + 
+  # theme(legend.position = 0)
 
 g_nlcd <- ggplot() + 
   geom_raster(data = test, aes(x = x, y = y, fill = value)) +
   scale_fill_manual(values = cols$color, labels = cols$description) +
   geom_sf(data = iws, alpha = 0) +
+  geom_sf(data = network) +
+  geom_sf(data = ll_lake) +
   coord_sf(datum = NA) + 
   theme_void() + 
   theme(legend.position = 0)
@@ -236,8 +249,10 @@ g_cdl <- ggplot() +
   coord_sf(datum = NA) + 
   theme_void()
 
-cowplot::plot_grid(g_nlcd + ggtitle("NLCD (2011)"), 
-                   g_cdl + ggtitle("CDL (2010)"), 
+cowplot::plot_grid(
+  g_nlcd_agg + ggtitle("Total Ag"), 
+  g_nlcd + ggtitle("Row Crop / Pasture"), 
+  g_cdl + ggtitle("Individual Crops / Pasture"), 
                    rel_widths = c(0.75, 1))
 ```
 
