--- a/figures/06_lulc_buffer_demo.Rmd
+++ b/figures/06_lulc_buffer_demo.Rmd
@@ -212,18 +212,20 @@ test[,3] <- factor(test[,3])
 names(test)[3] <- "value"
 test <- test %>%
   drop_na("value")
-cols     <- dplyr::filter(pal_nlcd(), code %in% unique(test[,3]))
-cols_agg <- mutate(cols, color = "#AA7028")
+cols     <- dplyr::filter(pal_nlcd(), code %in% unique(test[,3])) %>%
+  mutate(description = c("Pasture", "Row Crops"))
+cols_agg <- mutate(cols, color = "#AA7028", description = "Total Ag")[2,] 
 
 # codes 81 = pasture; 82 = row_crop
 
 g_nlcd_agg <- ggplot() + 
-  geom_raster(data = test, aes(x = x, y = y, fill = value)) +
+  geom_raster(data = mutate(test, value = 82), aes(x = x, y = y, fill = as.factor(value))) +
   scale_fill_manual(values = cols_agg$color, labels = cols_agg$description) +
   geom_sf(data = iws, alpha = 0) +
   geom_sf(data = network) +
   geom_sf(data = ll_lake) +
   coord_sf(datum = NA) + 
+  labs(fill = "") +
   theme_void() # + 
   # theme(legend.position = 0)
 
@@ -234,26 +236,35 @@ g_nlcd <- ggplot() +
   geom_sf(data = network) +
   geom_sf(data = ll_lake) +
   coord_sf(datum = NA) + 
-  theme_void() + 
-  theme(legend.position = 0)
+  labs(fill = "") +
+  theme_void() # + 
+  # theme(legend.position = 0)
 
+cdl_df <- mutate(cdl_df, category = forcats::fct_collapse(cdl_df$category, 
+                                                        `Corn` = "corn", 
+                                                        `Soybeans` = "soybeans", 
+                                                        `Pasture` = "pasture"))
 g_cdl <- ggplot() + 
   geom_raster(data = dplyr::filter(cdl_df, as.character(category) %in% 
-                                     c("corn", "soybeans", "pasture")), 
+                                     c("Corn", "Soybeans", "Pasture")), 
               aes(x = x, y = y, fill = category)) +
-  scale_fill_manual(values = setNames(color_key$color, 
-                                      color_key$category)) +
+  scale_fill_manual(values = 
+                      setNames(
+                        color_key$color, 
+                        snakecase::to_any_case(color_key$category, "sentence"))
+    ) +
   geom_sf(data = iws, alpha = 0) +
   geom_sf(data = network) +
   geom_sf(data = ll_lake) +
   coord_sf(datum = NA) + 
+  labs(fill = "") +
   theme_void()
 
 cowplot::plot_grid(
   g_nlcd_agg + ggtitle("Total Ag"), 
-  g_nlcd + ggtitle("Row Crop / Pasture"), 
-  g_cdl + ggtitle("Individual Crops / Pasture"), 
-                   rel_widths = c(0.75, 1))
+  g_nlcd + ggtitle("Row Crops"), 
+  g_cdl + ggtitle("Individual Crops"), 
+                   rel_widths = c(0.95, 1, 0.95), nrow = 1)
 ```
 
 ```{r raster_resolution, echo=FALSE, message=FALSE}
