--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -87,6 +87,8 @@ gg_tp_re <- ggplot(data = fit_tp$re) +
   scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
   geom_hline(yintercept = 0) +
   coord_flip() +
+  cowplot::theme_cowplot() +
+  theme(rect = element_rect(fill = "transparent")) +
   ylab("TP model, pasture RE slope") + theme(legend.position = 0)
 
 gg_tp_re
@@ -159,6 +161,8 @@ gg_tn_re <- ggplot(data = fit_tn$re) +
   scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
   geom_hline(yintercept = 0) +
   coord_flip() +
+  cowplot::theme_cowplot() +
+  theme(rect = element_rect(fill = "transparent")) +
   ylab("TN model, corn RE slope") + theme(legend.position = 0)
 
 gg_tn_re
@@ -176,7 +180,11 @@ dt        <- readRDS("../data/dt_scaled.rds") %>%
 dt_predictors <- dplyr::filter(dt, key %in% 
                                  c("tp",
                                    "nitrogen_atmospheric_deposition",
-                                   "clay_pct"))
+                                   "clay_pct")) %>%
+  dplyr::left_join(pred_key, by = c("key" = "var"))
+dt_predictors[is.na(dt_predictors$pretty), "pretty"] <- 
+  sapply(dt_predictors[is.na(dt_predictors$pretty), "key"], toupper)
+
 dt_modelled <- dplyr::filter(dt, key %in% 
                                c("maxdepth", "tn", "soil_org_carbon",
                                  "buffer_cultivated_crops", "corn",
@@ -188,8 +196,12 @@ gg_hist <- ggplot(data = dt_predictors) +
              linetype = "dashed") +
   scale_fill_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
   scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
+  cowplot::theme_cowplot() +
   theme(legend.position = 0) +
-  facet_wrap(~key)
+  theme(rect = element_rect(fill = "transparent"), 
+        strip.background = element_rect(fill = "white"), 
+        strip.text = element_text(face = "bold")) +
+  facet_wrap(~pretty)
 
 # line graph tn vs tp
 dt        <- readRDS("../data/dt_scaled.rds") %>%
@@ -205,7 +217,9 @@ gg_tp <- ggplot(data = dt) +
             aes(x = tn, y = tp, color = signif_hu4)) +
   scale_fill_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
   scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
-  theme(legend.position = 0)
+  cowplot::theme_cowplot() +
+  theme(legend.position = 0) + 
+  theme(rect = element_rect(fill = "transparent"))
 
 plot_grid(gg_hist, gg_tp, nrow = 2)
 
@@ -222,7 +236,9 @@ ggplot() +
   scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
   theme_cowplot() +
   ylab("TN model, corn RE slope") + xlab("N deposition") +
-  theme(legend.position = 0)
+  cowplot::theme_cowplot() +
+  theme(legend.position = 0) + 
+  theme(rect = element_rect(fill = "transparent"))
 
 gg_tn_re
 
