--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -37,7 +37,7 @@ re_brms        <- readRDS("../data/mcmc/re_brms.rds")
 pred_key       <- read.csv("../data/predictor_key.csv", stringsAsFactors = FALSE)
 ```
 
-```{r tp_summary, fig.height=4}
+```{r tp_summary, fig.width=3.25, fig.height=4}
 # lapply(re_brms, function(x) x$formula) 
 fit_tp   <- re_brms[[3]] # 3 is best tp model with random effects
 signif_hu4_ids <- fit_tp$re_signif_ids 
@@ -79,7 +79,7 @@ gg_tp_fe
 
 ```
 
-```{r tp_re}
+```{r tp_re, fig.width=3.25, fig.height=4.5}
 fit_tp$re$hu4vzoneid <- gsub("HU4_", "", fit_tp$re$hu4vzoneid)
 gg_tp_re <- ggplot(data = fit_tp$re) +
   geom_pointrange(aes(x = hu4vzoneid, y = `50%`, 
@@ -94,7 +94,7 @@ gg_tp_re <- ggplot(data = fit_tp$re) +
 gg_tp_re
 ```
 
-```{r tn_summary, fig.height=4}
+```{r tn_summary, fig.height=4, fig.width=3.25}
 # lapply(re_brms, function(x) x$formula) 
 fit_tn         <- re_brms[[5]] # 5 is best tn model with random effects
 signif_hu4_ids <- fit_tn$re_signif_ids 
@@ -152,7 +152,7 @@ gg_hu4 <- ggplot() +
 gg_hu4
 ```
 
-```{r tn_re}
+```{r tn_re, fig.width=3.25, fig.height=4.5}
 # dotplot tn hu4 random effects
 fit_tn$re$hu4vzoneid <- gsub("HU4_", "", fit_tn$re$hu4vzoneid)
 gg_tn_re <- ggplot(data = fit_tn$re) +
@@ -199,7 +199,7 @@ gg_hist <- ggplot(data = dt_predictors) +
   cowplot::theme_cowplot() +
   theme(legend.position = 0) +
   theme(rect = element_rect(fill = "transparent"), 
-        strip.background = element_rect(fill = "white"), 
+        strip.background = element_rect(fill = "transparent"), 
         strip.text = element_text(face = "bold")) +
   facet_wrap(~pretty)
 
