--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -62,7 +62,8 @@ gg_tp <- spread_draws(fit_tp,
   unnest() %>%
   tidyr::spread(name, value) %>%
   rowwise() %>%
-  mutate(signif = `5%` & `95%` > 0 | `5%` & `95%` < 0)
+  mutate(signif = (`5%` > 0 & `95%` > 0)| (`5%` < 0 & `95%` < 0))
+
 
 gg_tp_fe <- ggplot(data = gg_tp) + 
   geom_pointrange(aes(x = key, y = `50%`, 
@@ -89,7 +90,8 @@ gg_tp_re <- ggplot(data = fit_tp$re) +
   coord_flip() +
   cowplot::theme_cowplot() +
   theme(rect = element_rect(fill = "transparent")) +
-  ylab("TP model, pasture RE slope") + theme(legend.position = 0)
+  ylab("TP model, pasture RE slope") + xlab("Zone ID") +
+  theme(legend.position = 0)
 
 gg_tp_re
 ```
@@ -119,7 +121,7 @@ gg_tn <- spread_draws(fit_tn,
   unnest() %>%
   tidyr::spread(name, value) %>%
   rowwise() %>%
-  mutate(signif = `5%` & `95%` > 0 | `5%` & `95%` < 0)
+  mutate(signif = (`5%` > 0 & `95%` > 0)| (`5%` < 0 & `95%` < 0))
 
 gg_tn_fe <- ggplot(data = gg_tn) + 
   geom_pointrange(aes(x = key, y = `50%`, 
@@ -163,7 +165,8 @@ gg_tn_re <- ggplot(data = fit_tn$re) +
   coord_flip() +
   cowplot::theme_cowplot() +
   theme(rect = element_rect(fill = "transparent")) +
-  ylab("TN model, corn RE slope") + theme(legend.position = 0)
+  ylab("TN model, corn RE slope") + xlab("Zone ID") + 
+  theme(legend.position = 0)
 
 gg_tn_re
 ```
