--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -92,7 +92,7 @@ gg_tp_re <- ggplot(data = fit_tp$re) +
   coord_flip() +
   cowplot::theme_cowplot() +
   theme(rect = element_rect(fill = "transparent")) +
-  ylab("TP model, pasture RE slope") + xlab("Zone ID") +
+  ylab("TP model, Ag RE slope") + xlab("Zone ID") +
   theme(legend.position = 0)
 
 gg_tp_re
