--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -37,7 +37,7 @@ re_brms        <- readRDS("../data/mcmc/re_brms.rds")
 pred_key       <- read.csv("../data/predictor_key.csv", stringsAsFactors = FALSE)
 ```
 
-```{r tp_summary, out.width="3.25in", out.height="4in"}
+```{r tp_fe, out.width="3.25in", out.height="4in"}
 # lapply(re_brms, function(x) x$formula) 
 fit_tp   <- re_brms[[1]] # 1 is best tp model with random effects
 signif_hu4_ids <- fit_tp$re_signif_ids 
@@ -73,8 +73,6 @@ gg_tp_fe <- ggplot(data = gg_tp) +
   ylim(-0.6, 0.4) +
   ylab("Standardized FE slope") + theme(legend.position = 0) +
   xlab("") 
-
-gg_tp_fe
 ```
 
 ```{r tp_re, fig.width=3.25, fig.height=4.5}
@@ -98,7 +96,7 @@ gg_tp_re <- ggplot(data = fit_tp$re) +
 gg_tp_re
 ```
 
-```{r tn_summary, out.width="3.25in", out.height="4in"}
+```{r tn_fe, out.width="3.25in", out.height="4in"}
 # lapply(re_brms, function(x) x$formula) 
 fit_tn         <- re_brms[[5]] # 5 is best tn model with random effects
 signif_hu4_ids <- fit_tn$re_signif_ids 
@@ -129,8 +127,6 @@ gg_tn_fe <- ggplot(data = gg_tn) +
   ylim(-0.6, 0.4) +
   ylab("Standardized FE slope") + theme(legend.position = 0) +
   xlab("") 
-
-gg_tn_fe
 ```
 
 ```{r tn_re_hu4}
@@ -248,6 +244,20 @@ gg_tn_re
 
 gg_line
 
+```
+
+```{r fe}
+cowplot::plot_grid(gg_tp_fe + theme(axis.title.x = element_blank()), 
+                   gg_tn_fe + theme(axis.text.y = element_blank(), 
+                                    axis.title.x = element_blank()), 
+                   rel_widths = c(1, 0.6))
+```
+
+```{r re}
+cowplot::plot_grid(gg_tp_re, 
+                   gg_tn_re + theme(axis.text.y = element_blank(), 
+                                    axis.title.y = element_blank()), 
+                   rel_widths = c(1, 0.9))
 ```
 
 ```{r tn_interaction, eval=FALSE}
