--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -167,7 +167,7 @@ gg_tn_re <- ggplot(data = fit_tn$re) +
 gg_tn_re
 ```
 
-```{r tn_re_compare, fig.height=3}
+```{r tn_re_compare, fig.height=3, fig.width=4}
 # compare lakes in signif hu4s
 dt        <- readRDS("../data/dt_scaled.rds") %>%
   mutate(signif_hu4 = hu4_zoneid %in% signif_hu4_ids) %>%
@@ -177,7 +177,7 @@ dt        <- readRDS("../data/dt_scaled.rds") %>%
   mutate(median = median(value, na.rm = TRUE))
 
 dt_predictors <- dplyr::filter(dt, key %in% 
-                                 c("tp",
+                                 c(#"tp",
                                    "nitrogen_atmospheric_deposition",
                                    "clay_pct")) %>%
   dplyr::left_join(pred_key, by = c("key" = "var"))
