--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -90,7 +90,7 @@ gg_tp_re <- ggplot(data = fit_tp$re) +
   coord_flip() +
   cowplot::theme_cowplot() +
   theme(rect = element_rect(fill = "transparent")) +
-  ylab("TP model, Ag RE slope") + xlab("Zone ID") +
+  ggtitle("TP ~ Ag slope") + xlab("Zone ID") + ylab("") +
   theme(legend.position = 0)
 
 gg_tp_re
@@ -161,10 +161,9 @@ gg_tn_re <- ggplot(data = fit_tn$re) +
   coord_flip() +
   cowplot::theme_cowplot() +
   theme(rect = element_rect(fill = "transparent")) +
-  ylab("TN model, corn RE slope") + xlab("Zone ID") + 
+  ggtitle("TN ~ corn slope") + xlab("Zone ID") + ylab("") +
   theme(legend.position = 0)
 
-gg_tn_re
 ```
 
 ```{r tn_re_compare, fig.height=3, fig.width=4}
