--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -56,23 +56,28 @@ gg_tp <- spread_draws(fit_tp, `b_.*`, regex = TRUE) %>%
   mutate(key = stringr::str_replace(key, "b_", "")) %>%
   left_join(pred_key, by = c("key" = "varv")) %>%
   group_by(pretty) %>%
-  summarize(value = list(tibble::enframe(quantile(value, probs=c(0.05,0.5,0.95))))) %>% 
-  unnest() %>%
+  summarize(value = list(tibble::enframe(
+    quantile(value, probs=c(0.05,0.5,0.95))))) %>% unnest() %>%
   tidyr::spread(name, value) %>%
   rowwise() %>%
-  mutate(signif = (`5%` > 0 & `95%` > 0)| (`5%` < 0 & `95%` < 0))
+  mutate(signif = (`5%` > 0 & `95%` > 0)| (`5%` < 0 & `95%` < 0)) %>%
+  left_join(dplyr::select(pred_key, pretty, category)) %>%
+  arrange(category) %>%
+  ungroup() %>% mutate(pretty = factor(pretty, levels = pretty))
 
-
-gg_tp_fe <- ggplot(data = gg_tp) + 
+text_colors <- ifelse(gg_tp$signif == 0, "black", "red")
+(gg_tp_fe <- ggplot(data = gg_tp) + 
   geom_pointrange(aes(x = pretty, y = `50%`, 
                       ymin = `5%`, ymax = `95%`, color = signif)) +
   scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
   geom_hline(yintercept = 0) +
   coord_flip() +
   theme_cowplot() +
+  theme(axis.text.y = element_text(size = 12, color = text_colors)) +
   ylim(-0.6, 0.4) +
-  ylab("Standardized FE slope") + theme(legend.position = 0) +
-  xlab("") 
+  ylab("Standardized FE slope") + theme(legend.position = 0) + 
+  ggtitle("TP ~ Slope") +
+  xlab(""))
 ```
 
 ```{r tp_re, fig.width=3.25, fig.height=4.5}
@@ -125,7 +130,7 @@ gg_tn_fe <- ggplot(data = gg_tn) +
   coord_flip() +
   theme_cowplot() +
   ylim(-0.6, 0.4) +
-  ylab("Standardized FE slope") + theme(legend.position = 0) +
+  ylab("Standardized FE slope") + theme(legend.position = 0) + ggtitle("TN ~ Slope") +
   xlab("") 
 ```
 
