--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -62,6 +62,10 @@ gg_tp <- spread_draws(fit_tp, `b_.*`, regex = TRUE) %>%
   rowwise() %>%
   mutate(signif = (`5%` > 0 & `95%` > 0)| (`5%` < 0 & `95%` < 0)) %>%
   left_join(dplyr::select(pred_key, pretty, category)) %>%
+  mutate(category = factor(category, 
+                           levels = rev(c("Nutrient inputs", "Nutrient transport", 
+                                      "Land-use cover", "Buffer composition", 
+                                      "Lake")))) %>%
   arrange(category) %>%
   ungroup() %>% mutate(pretty = factor(pretty, levels = pretty))
 
