--- a/manuscript/appendix.Rmd
+++ b/manuscript/appendix.Rmd
@@ -77,7 +77,7 @@ dt_waffle <- tidyr::gather(dt, key = "key", value = "value", -`Trophic State`) %
 
 ggplot(dt_waffle,
        aes(fill=`Trophic State`, values = `value`)) +
-  geom_waffle(color = "white", size=0.7, n_rows = 10, flip = TRUE) +
+  geom_waffle(color = "white", size=0.7, n_rows = 5, flip = FALSE) +
   # facet_wrap(~key, ncol = 1) +
   scale_x_discrete(expand = c(0,0)) +
   scale_y_discrete(expand = c(0,0)) +
@@ -92,7 +92,7 @@ ggplot(dt_waffle,
         strip.text = element_text(size = 16), 
         legend.text = element_text(size = 10), 
         legend.key.size = unit(0.5, "line")) + 
-  guides(fill = guide_legend(nrow = 2))
+  guides(fill = guide_legend(nrow = 1))
 
 # highlighted regions
 test <- readRDS("../data/dt.rds") %>%
